# bikefitting

./: .gitignore  README.md  pyproject.toml
.github/workflows/: backend.yml  frontend.yml  function.yml  terraform.yml
backend/src/: entry.py
backend/src/scripts/: deploy_model.py  endpoint_env_requirements.txt  pyproject.toml
backend/src/test/: pyproject.toml  test_cropping.py  test_model.py  test_postprocessing.py  test_preprocessing.py  test_visualizations.py
backend/src/utils/: azure.py  cropping.py  keypoints.py  model.py  postprocessing.py  preprocessing.py  utils.py  visualizations.py
frontend/: Dockerfile  config.toml  pyproject.toml
frontend/src/: app.py
frontend/src/test/: test_azure.py  test_datahandling.py  test_json.json  test_ui.py  test_utils.py
frontend/src/utils/: azure.py  datahandling.py  ui.py  utils.py  visualizations.py
frontend/textfiles/: followup_change.txt  followup_nochange.txt  methodology.txt  only_on_bike_footage.txt  setup.txt  upload_instructions.txt
function/: requirements.txt
function/BlobTrigger/: __init__.py  function.json
terraform/: README.md  backend.tf  frontend.tf  function.tf  main.tf  variables.tf
