[tool.poetry]
name = "rootsacademy-bikefitting"
version = "0.1.0"
description = ""
authors = ["YannouRavoet <yannou.ravoet@dataroots.io>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
