[tool.poetry]
name = "bikefitting-backend-scripts"
version = "0.1.0"
description = ""
authors = ["YannouRavoet <yannou.ravoet@dataroots.io>", "LiesbethBogaert <liesbeth.bogaert@dataroots.io>", "ChielMues <chiel.mues@dataroots.io>", "GiliamRosseel <giliam.rosseel@dataroots.io>"]

[tool.poetry.dependencies]
python = "^3.8"
azure-storage-blob = "12.9.0"
python-dotenv = "0.19.1"
azureml-core = "1.35.0"
azure-cli-core = "2.30.0"
requests = "2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
