[tool.poetry]
name = "bikefitting-backend-test"
version = "0.1.0"
description = ""
authors = ["YannouRavoet <yannou.ravoet@dataroots.io>", "LiesbethBogaert <liesbeth.bogaert@dataroots.io>", "ChielMues <chiel.mues@dataroots.io>", "GiliamRosseel <giliam.rosseel@dataroots.io>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "2.6.0"
tensorflow-hub = "0.12.0"
tensorflow-estimator = "2.6.0"
keras = "2.6.0"
moviepy = "1.0.3"
scipy = "1.5.4"
Pillow = "8.4.0"
azure-common = "1.1.27"
azure-core = "1.19.1"
azure-storage-blob = "12.9.0"
azure-identity = "1.7.0"
seaborn = "0.11.2"
pandas = "1.1.5"
matplotlib = "3.3.4"
python-dotenv = "0.19.1"
numpy = "1.19.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
